fix(Tabs): fix Firefox overflow behavior

--- a/packages/components/src/components/Tabs/Tabs.module.css
+++ b/packages/components/src/components/Tabs/Tabs.module.css
@@ -1,3 +1,5 @@
+@import url('../../styles/mixins.css');
+
 .base {
   display: flex;
   position: relative;
@@ -136,6 +138,12 @@
   .tab:last-child {
     padding-block-end: 0;
   }
+
+  .label {
+    min-inline-size: 0;
+
+    @mixin ellipsis;
+  }
 }
 
 .stretched {
@@ -145,6 +153,12 @@
 
   .tab {
     inline-size: 100%;
+  }
+
+  .label {
+    min-inline-size: 0;
+
+    @mixin ellipsis;
   }
 }
 
@@ -207,12 +221,4 @@
   flex-shrink: 0;
   display: flex;
   align-items: center;
-}
-
-.label {
-  min-inline-size: 0;
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
